plugin/src/test/resources/annotator/perl/syntax/emptySort534.code
@a = sort @empty; # unaffected
@a = sort<error descr="<expression>, <method>, <scalar>, Perl5: ( or Perl5: { expected, got ';'">;</error>        # now a compile-time error
@a = sort ();     # also a compile-time error
@a = sort {} ();     # okay
@a = sort sorter ();     # okay

